passing requirements, most functions present

--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,8 @@
     <div id="main">
       <h1>chatterbox</h1>
       <span>Room: </span>
-      <select id="roomSelect">
-      </select>
+      <select id="roomSelect"></select>
+      <button type="button" id="addRoom">Add Room</button>
       <form class="message-field" id="send">
         <input type="text" id="message" placeholder="Enter a message...">
         <input type="submit" class="submit" value="Submit">
